# artifacts/api-server/src/routes/index.ts
@@ -1,8 +1,12 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
+import roomsRouter from "./rooms";
+import youtubeRouter from "./youtube";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
+router.use(roomsRouter);
+router.use(youtubeRouter);
 
 export default router;
